Prevent user avatar from stretching disproportionally

--- a/frontend/src/custom.scss
+++ b/frontend/src/custom.scss
@@ -35,6 +35,7 @@ body {
 .user-pic {
   height: 40px;
   width: 40px;
+  object-fit: contain;
 }
 
 .user-img {
